# Guardian

./: .env.example  .gitignore  ATTACKS.md  BLOG.md  CONTRIBUTING.md  Dockerfile  HUGGINGFACE_PITCH.md  PITCH.md  README.md  decision_log.txt  docker-compose.yml  guardian_kaggle_training.ipynb  hf_app.py  models.py  n8n_guardian_workflow.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  technical_report.md  training_space.py  upload_hf.py
.github/workflows/: ci.yml
guardian/: __init__.py  client.py  models.py  openenv.yaml
guardian-mcp-proxy/: guardian_mcp.yaml  pyproject.toml  setup.py
guardian-mcp-proxy/src/guardian_mcp_proxy/: __init__.py  cli.py  proxy.py
guardian-mcp-proxy/src/guardian_mcp_proxy/tests/: test_proxy.py
guardian/agents/: compliance_simulator.py  curriculum_agent.py  guardian_agent.py  worker_agent.py
guardian/dashboard/: app.py
guardian/data/: baseline_untrained.json  before_after_transcripts.md  eval_scenarios.json  hitl_replay.jsonl  latency_results.json  mcp_persistent_audit.jsonl  reward_breakdown_log.csv  schema_state.json  scorecards.jsonl  training_log.jsonl
guardian/environment/: adaptation_engine.py  attack_taxonomy.py  difficulty.py  enterprise_graph.py  guardian_env.py  openenv_wrapper.py  reward_computer.py  threat_intel_engine.py
guardian/hitl/: __init__.py  backtrack.py  escalation.py  hitl_manager.py  hitl_router.py
guardian/mcp/: __init__.py  domain_servers.py  gateway.py  mock_servers.py  tool_taxonomy.py
guardian/server/: app.py  (+1 more)
server/: app.py  guardian_environment.py
(+15 files in other folders)
